...
                            <constraint firstItem="Ra1-BA-Mmn" firstAttribute="trailing" secondItem="2BS-D5-sQz" secondAttribute="trailing" constant="16" id="knM-3P-AFo"/>
                            <constraint firstItem="2BS-D5-sQz" firstAttribute="leading" secondItem="Ra1-BA-Mmn" secondAttribute="leading" constant="16" id="log-7M-0WH"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Ra1-BA-Mmn"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Item" id="kOz-lF-1Lw">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="kDi-7A-2Hj">
                            <connections>
                                <action selector="cancelButton:" destination="eil-ZD-YAE" id="8zR-Gz-tDh"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="QLa-gz-GTS">
                            <connections>
...
                            <constraint firstItem="20P-wM-cfn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="f8x-ma-pXx"/>
                            <constraint firstItem="20P-wM-cfn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="hjO-MY-k2Q"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Edit Item" id="nXx-pc-DO9">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="phw-nI-fp2">
                            <connections>
                                <action selector="cancelButton:" destination="BYZ-38-t0r" id="BsA-Ts-uxK"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="Rqc-6k-J99">
...
